--- a/Atlas SEO/manifest.json
+++ b/Atlas SEO/manifest.json
@@ -1,10 +1,18 @@
 {
   "manifest_version": 3,
   "name": "Atlas SEO (No-API)",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "All-in-one SEO audit, crawl, and SERP helper without external APIs.",
-  "permissions": ["activeTab", "scripting", "storage", "tabs"],
-  "host_permissions": ["http://*/*", "https://*/*"],
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "storage",
+    "tabs"
+  ],
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
+  ],
   "action": {
     "default_popup": "popup/popup.html",
     "default_title": "Atlas SEO",
@@ -23,8 +31,13 @@
   },
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["content/collector.js"],
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "content/collector.js"
+      ],
       "run_at": "document_start"
     }
   ]
